force-app/main/default/objects/Application_Inventory__c/Application_Inventory__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT: Provides application component detailed related to customer requests.</description>
    <label>Application Inventory</label>
    <nameField>
        <displayFormat>AI-{0000}</displayFormat>
        <label>Application Inventory #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Inventory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>