force-app/main/default/objects/Application_Inventory__c/fields/Build_1__c.field-meta.xml
<CustomField>
    <fullName>Build_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Storing estimated hours required for build1 phase.</description>
    <label>Build</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>