force-app/main/default/objects/Application_Inventory__c/fields/Build_2__c.field-meta.xml
<CustomField>
    <fullName>Build_2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Storing estimated hours required for build2 phase.</description>
    <label>Build_2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>