force-app/main/default/objects/Application_Inventory__c/fields/Build_Complete__c.field-meta.xml
<CustomField>
    <fullName>Build_Complete__c</fullName>
    <description>This field specifies the build completion in percentage.</description>
    <label>Build % Complete</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>