force-app/main/default/objects/Application_Inventory__c/fields/Build_Owner__c.field-meta.xml
<CustomField>
    <fullName>Build_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the owner of the build</description>
    <label>Build Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Application Inventories (Build Owner)</relationshipLabel>
    <relationshipName>Application_Inventories1</relationshipName>
    <type>Lookup</type>
</CustomField>