force-app/main/default/objects/Application_Inventory__c/fields/Complexity_1__c.field-meta.xml
<CustomField>
    <fullName>Complexity_1__c</fullName>
    <description>Storing estimated complexity for particular type of work(Stage1)</description>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
            <value>
                <fullName>Very Complex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>