force-app/main/default/objects/Application_Inventory__c/fields/Complexity_2__c.field-meta.xml
<CustomField>
    <fullName>Complexity_2__c</fullName>
    <description>Storing estimated complexity for particular type of work(stage2)</description>
    <label>Complexity_2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
            <value>
                <fullName>Very Complex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>