force-app/main/default/objects/Application_Inventory__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Storing description about  New Application Inventory</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>