force-app/main/default/objects/Application_Inventory__c/fields/Design_1__c.field-meta.xml
<CustomField>
    <fullName>Design_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Storing estimated hours required for design phase1</description>
    <label>Design</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>