force-app/main/default/objects/Application_Inventory__c/fields/Design_2__c.field-meta.xml
<CustomField>
    <fullName>Design_2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Storing estimated hours required for design phase2</description>
    <label>Design_2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>