force-app/main/default/objects/Application_Inventory__c/fields/Design_Complete__c.field-meta.xml
<CustomField>
    <fullName>Design_Complete__c</fullName>
    <description>Storing  percenatge completion of design phase</description>
    <label>Design % Complete</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>