force-app/main/default/objects/Application_Inventory__c/fields/Design_Owner__c.field-meta.xml
<CustomField>
    <fullName>Design_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Storing name of a user who is doing design</description>
    <label>Design Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Application Inventories</relationshipLabel>
    <relationshipName>Application_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>