force-app/main/default/objects/Application_Inventory__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>Request for which application inventory has been created</description>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Application Inventory</relationshipLabel>
    <relationshipName>Application_Inventory</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>