force-app/main/default/objects/Application_Inventory__c/fields/SIT_Complete__c.field-meta.xml
<CustomField>
    <fullName>SIT_Complete__c</fullName>
    <description>Storing  percenatge completion of SIT phase</description>
    <label>SIT % Complete</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>