force-app/main/default/objects/Application_Inventory__c/fields/SIT_Owner__c.field-meta.xml
<CustomField>
    <fullName>SIT_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Storing name of a user who is doing SIT</description>
    <label>SIT Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Application Inventories (SIT Owner)</relationshipLabel>
    <relationshipName>Application_Inventories2</relationshipName>
    <type>Lookup</type>
</CustomField>