force-app/main/default/objects/Application_Inventory__c/fields/Test_1__c.field-meta.xml
<CustomField>
    <fullName>Test_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Storing estimated hours required for Test phase1</description>
    <label>Test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>