force-app/main/default/objects/Application_Inventory__c/fields/Test_2__c.field-meta.xml
<CustomField>
    <fullName>Test_2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Storing estimated hours required for Test phase2</description>
    <label>Test_2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>