force-app/main/default/objects/Application_Inventory__c/fields/Total_Build__c.field-meta.xml
<CustomField>
    <fullName>Total_Build__c</fullName>
    <description>Total time required in build phase</description>
    <formula>Build_1__c  +  Build_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Build</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>