force-app/main/default/objects/Application_Inventory__c/fields/Total_Design__c.field-meta.xml
<CustomField>
    <fullName>Total_Design__c</fullName>
    <description>Total time required in design phase</description>
    <formula>Design_1__c + Design_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Design</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>