force-app/main/default/objects/Application_Inventory__c/fields/Total_Test__c.field-meta.xml
<CustomField>
    <fullName>Total_Test__c</fullName>
    <description>Total time required in Test phase</description>
    <formula>Test_1__c + Test_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>