force-app/main/default/objects/Application_Inventory__c/fields/Type_1__c.field-meta.xml
<CustomField>
    <fullName>Type_1__c</fullName>
    <description>Type of work in phase1</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Workflow or Approval</fullName>
            </value>
            <value>
                <fullName>User Administration</fullName>
            </value>
            <value>
                <fullName>Reports &amp; Dashboards</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Integration (Real-Time)</fullName>
            </value>
            <value>
                <fullName>Integration (Batch)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>